# py_properties

./: .env.template  .pre-commit-config.yaml  README.md  pyproject.toml
app/: db_config.py  get_properties.py  server.py
tests/: test_py_properties.py
