[tool.poetry]
name = "py_properties"
version = "0.1.0"
description = ""
authors = ["Kevin Rodríguez <kyrodriguez97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mysql-connector-python = "^8.0.30"
pre-commit = "^2.20.0"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^2.10.1"
autoflake = "^1.4"
flake8 = "^3.8.4"
mypy = "^0.790"
isort = "^5.0"
pre-commit = "^2.8.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
